welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if (7<=hour<=20){
    return false
  } else {
    return true
  }
}
